i fucking hate the html5 player

--- a/templates/2013/_layout.twig
+++ b/templates/2013/_layout.twig
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html data-cast-api-enabled="true" lang="en">
    <head>
       <script id="js-3480730095" class="www-searchbox" src="//s.ytimg.com/yts/jsbin/www-searchbox-vfl5XnjkO.js" data-loaded="true"></script><script id="js-4197864020" class="www-masthead" src="//s.ytimg.com/yts/jsbin/www-masthead-vflLqI3m0.js" data-loaded="true"></script><script>var ytcsi = {data_: {tick: {},span: {},info: {}},tick: function(l, t) {ytcsi.data_.tick[l] = t || +new Date();},span: function(l, s) {ytcsi.data_.span[l] = (typeof s == 'number') ? s :+new Date() - ytcsi.data_.tick[l];},info: function(k, v) {ytcsi.data_.info[k] = v;}};ytcsi.tick('_start');if (document.webkitVisibilityState == 'prerender') {ytcsi.info('prerender', 1);document.addEventListener('webkitvisibilitychange', function() {ytcsi.tick('_start');}, false);}try {ytcsi.pt_ = (window.chrome && chrome.csi().pageT ||window.gtbExternal && gtbExternal.pageT() ||window.external && external.pageT);if (ytcsi.pt_) {ytcsi.info('pt', Math.floor(ytcsi.pt_));}} catch(e) {}</script>  
@@ -19,7 +20,7 @@
       <style type="text/css">.gsok_a{background:url(data:image/gif;base64,R0lGODlhEwALAKECAAAAABISEv///////yH5BAEKAAIALAAAAAATAAsAAAIdDI6pZ+suQJyy0ocV3bbm33EcCArmiUYk1qxAUAAAOw==) no-repeat center;display:inline-block;height:11px;line-height:0;width:19px}.gsok_a img{border:none;visibility:hidden}.gsst_a{display:inline-block}.gsst_a{cursor:pointer;padding:0 4px}.gsst_a:hover{text-decoration:none!important}.gsst_b{font-size:16px;padding:0 2px;position:relative;user-select:none;-moz-user-select:none;white-space:nowrap}.gsst_e{opacity:0.55;}.gsst_a:hover .gsst_e,.gsst_a:focus .gsst_e{opacity:0.72;}.gsst_a:active .gsst_e{opacity:1;}.gsst_f{background:white;text-align:left}.gsst_g{background-color:white;border:1px solid #ccc;border-top-color:#d9d9d9;box-shadow:0 2px 4px rgba(0,0,0,0.2);-moz-box-shadow:0 2px 4px rgba(0,0,0,0.2);margin:-1px -3px;padding:0 6px}.gsst_h{background-color:white;height:1px;margin-bottom:-1px;position:relative;top:-1px}.gsib_a{width:100%;padding:4px 6px 0}.gsib_a,.gsib_b{vertical-align:top}.gssb_c{border:0;position:absolute;z-index:989}.gssb_e{border:1px solid #ccc;border-top-color:#d9d9d9;box-shadow:0 2px 4px rgba(0,0,0,0.2);-moz-box-shadow:0 2px 4px rgba(0,0,0,0.2);cursor:default}.gssb_f{visibility:hidden;white-space:nowrap}.gssb_k{border:0;display:block;position:absolute;top:0;z-index:988}.gsdd_a{border:none!important}a.gspqs_a{padding:0 3px 0 8px}.gspqs_b{color:#666;line-height:22px}.gspr_a{padding-right:1px}.gsq_a{padding:0}.gssb_a{padding:0 7px}.gssb_a,.gssb_a td{white-space:nowrap;overflow:hidden;line-height:22px}#gssb_b{font-size:11px;color:#36c;text-decoration:none}#gssb_b:hover{font-size:11px;color:#36c;text-decoration:underline}.gssb_g{text-align:center;padding:8px 0 7px;position:relative}.gssb_h{font-size:15px;height:28px;margin:0.2em}.gssb_i{background:#eee}.gss_ifl{visibility:hidden;padding-left:5px}.gssb_i .gss_ifl{visibility:visible}a.gssb_j{font-size:13px;color:#36c;text-decoration:none;line-height:100%}a.gssb_j:hover{text-decoration:underline}.gssb_l{height:1px;background-color:#e5e5e5}.gssb_m{color:#000;background:#fff}.gscp_a,.gscp_c,.gscp_d,.gscp_e,.gscp_f{display:inline-block;vertical-align:bottom}.gscp_f{border:none}.gscp_a{background:#d9e7fe;border:1px solid #9cb0d8;cursor:default;outline:none;text-decoration:none!important;user-select:none;-moz-user-select:none;}.gscp_a:hover{border-color:#869ec9}.gscp_a.gscp_b{background:#4787ec;border-color:#3967bf}.gscp_c{color:#444;font-size:13px;font-weight:bold}.gscp_d{color:#aeb8cb;cursor:pointer;font:21px arial,sans-serif;line-height:inherit;padding:0 7px}.gscp_d{position:relative;top:1px}.gscp_a:hover .gscp_d{color:#575b66}.gscp_c:hover,.gscp_a .gscp_d:hover{color:#222}.gscp_a.gscp_b .gscp_c,.gscp_a.gscp_b .gscp_d{color:#fff}.gscp_e{height:100%;padding:0 4px}.gsfe_a{border:1px solid #b9b9b9;border-top-color:#a0a0a0;box-shadow:inset 0px 1px 2px rgba(0,0,0,0.1);-moz-box-shadow:inset 0px 1px 2px rgba(0,0,0,0.1);-webkit-box-shadow:inset 0px 1px 2px rgba(0,0,0,0.1);}.gsfe_b{border:1px solid #4d90fe;outline:none;box-shadow:inset 0px 1px 2px rgba(0,0,0,0.3);-moz-box-shadow:inset 0px 1px 2px rgba(0,0,0,0.3);-webkit-box-shadow:inset 0px 1px 2px rgba(0,0,0,0.3);}.gsfi{font-size:16px}.gsfs{font-size:16px}a.gssb_j{font-size:12px;color:#03c}.gssb_a,.gssb_a td{line-height:20px}.gssb_a{padding:0 6px}.gssb_c{z-index:3000001}.gssb_i td{background:#eee}.gssb_k{z-index:3000000}.gssb_l{margin:2px 0}.gsib_a{padding:0 4px}.gsok_a{padding:0}.gsok_a img{display:block}.gsfe_b{border:1px solid #1c62b9;box-shadow:inset 0 1px 2px rgba(0,0,0,0.3);-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,0.3);outline:none;}a.gscp_a{position:relative;background:#e2e2e2;border:1px solid #bbb;border-radius:3px}.gsfe_a a.gscp_a{border-width:1px;border-style:solid;border-color:#bbb}a.gscp_a.gscp_b{border-color:#777!important;background:#999;outline:none}.gscp_c{color:#666;font-size:11px;font-weight:bold;padding-right:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#80ffffff,Positive=true)";zoom:1;filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#80ffffff,Positive=true)}.gsfe_a a.gscp_a .gscp_c{color:#444}a.gscp_a.gscp_b .gscp_c,.gsfe_a a.gscp_a.gscp_b .gscp_c{color:#fff;text-shadow:0 1px 0 rgba(100, 100, 100, 0.5);-ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#80646464,Positive=true)";zoom:1;filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#80646464,Positive=true)}.gscp_d{position:absolute;padding:0;background:url(//s.ytimg.com/yts/img/icons/close-vflrEJzIW.png);background-repeat:no-repeat;background-position-y:0;right:3px;top:6px;font-size:0;width:13px;height:13px}.gscp_d:hover{background-position-y:-13px}a.gscp_a.gscp_b .gscp_d{background-position-y:-26px}.gsfe_a a.gscp_a.gscp_b .gscp_d:hover{background-position-y:-39px}.gscp_f{background:#000}</style>
    </head>
    <!-- machid: sNW5tN3Z2SWdXaDZJSG85YlF5Y0pwMXFqWjZDOThhVjdrMjd5QnU3SzUxYnlIZWdzc1ZBQUxR -->
-   <body dir="ltr" class="ltr site-left-aligned exp-new-site-width exp-watch7-comment-ui hitchhiker-enabled guide-enabled guide-expanded page-loaded">
+   <body dir="ltr" class="ltr site-left-aligned exp-new-site-width exp-watch7-comment-ui hitchhiker-enabled guide-enabled {% if not showGuideWhatever %}guide-collapsed{% endif %} guide-expanded page-loaded">
       <div id="body-container">
          <form name="logoutForm" method="POST" action="/logout"><input type="hidden" name="action_logout" value="1"><input name="session_token" type="hidden" value="KdtAEfx3K7-XllPE43NdE0-uyeF8MTM3MDM4MTk4MEAxMzcwMjk1NTgw"></form>
          <div id="yt-masthead-container" class="yt-grid-box">
@@ -39,18 +40,19 @@
          <div id="alerts">  </div>
          <div id="header">
             <div id="masthead_child_div"></div>
-            <div id="ad_creative_expand_btn_1" class="masthead-ad-control masthead-ad-control-header open hid">
-               <a onclick="masthead.expand_ad(); return false;">
-               <span>Show ad</span>
-               <img src="//s.ytimg.com/yts/img/pixel-vfl3z5WfW.gif" alt="">
-               </a>
-            </div>
          </div>
-         <div id="page-container">
-            <div id="page" class="home branded-page-v2-masthead-ad-header clearfix masthead-ad-expanded">
+         <div id="page-container"> <!--   watch   clearfix -->
+            <div id="page" 
+			{% if page == "index" %}
+			class="home branded-page-v2-masthead-ad-header clearfix masthead-ad-expanded"
+			{% endif %}
+			{% if page == "watch" %}
+			class="watch   clearfix"
+			{% endif %}
+			>
                <div id="guide">
-                  <div id="guide-container" class="">
-                     <div id="guide-main" class="    guide-module     spf-nolink ">
+                  <div id="guide-container" {% if not showGuideWhatever %}class="collapsible-guide"{% endif %}>
+                     <div id="guide-main" class="    guide-module     spf-nolink {% if not showGuideWhatever %}collapsed{% endif %} ">
                         <div class="guide-module-toggle">
                            <span class="guide-module-toggle-icon">
                            <span class="guide-module-toggle-arrow"></span>
@@ -618,25 +620,8 @@
            searchBox.focus();
          }
       </script>
-      <script>
-         yt.setMsg('FLASH_UPGRADE', "\u003cdiv class=\"yt-alert yt-alert-default yt-alert-error  yt-alert-player\"\u003e  \u003cdiv class=\"yt-alert-icon\"\u003e\n    \u003cimg s\u0072c=\"\/\/s.ytimg.com\/yts\/img\/pixel-vfl3z5WfW.gif\" class=\"icon master-sprite\" alt=\"Alert icon\"\u003e\n  \u003c\/div\u003e\n\u003cdiv class=\"yt-alert-buttons\"\u003e\u003c\/div\u003e\u003cdiv class=\"yt-alert-content\" role=\"alert\"\u003e    \u003cspan class=\"yt-alert-vertical-trick\"\u003e\u003c\/span\u003e\n    \u003cdiv class=\"yt-alert-message\"\u003e\n            You need to upgrade your Adobe Flash Player to watch this video. \u003cbr\u003e \u003ca href=\"http:\/\/get.adobe.com\/flashplayer\/\"\u003eDownload it from Adobe.\u003c\/a\u003e\n    \u003c\/div\u003e\n\u003c\/div\u003e\u003c\/div\u003e");
-         yt.setConfig({
-         'PLAYER_CONFIG': {"html5": false, "args": {"enablejsapi": 1}, "min_version": "8.0.0", "url": "\/\/s.ytimg.com\/yts\/swf\/masthead_child-vflRMMO6_.swf", "url_v8": "", "attrs": {"id": "masthead_child", "height": "1", "width": "1"}, "params": {"allowscriptaccess": "always", "bgcolor": "#FFFFFF", "allowfullscreen": "false"}, "url_v9as2": ""}
-         });
-         
-         yt.flash.embed("masthead_child_div", yt.getConfig('PLAYER_CONFIG'));
-      </script>
       <script id="js-407664050" class="www-home" src="//s.ytimg.com/yts/jsbin/www-home-vflIk6iLA.js" data-loaded="true"></script>
       <script>
-         window.masthead = new yt.www.ads.MastheadAd(
-             "keaP86sPcSQ",
-             false);
-         
-         
-         
-         
-         
-         
          yt.setConfig('JS_PAGE_MODULES', {
          "\/\/s.ytimg.com\/yts\/jsbin\/www_feed_mod-vfl-ra4la.js": []
          });
@@ -673,8 +658,4 @@
          </tbody>
       </table>
    </body>
-   <style id="stylus-3" type="text/css" class="stylus">#wm-ipp-base {
-      min-height: 0px;
-      }
-   </style>
 </html>
