is it me or am i losing motivation

--- a/templates/sbnext-finalium/user-2012.twig
+++ b/templates/sbnext-finalium/user-2012.twig
@@ -97,7 +97,7 @@
  -->									</div>
 								</div>
 							</div>
-<div class="bg-neutral" style="padding: 15px 10px;">
+<div class="bg-neutral" style="padding: 1px 10px 10px;">
 			      <div class="tab">
                      <button class="tablinks active" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
 					 <button class="tablinks" onclick="openTab(event, 'Videos')">Videos</button>
