--- a/templates/2013/components/player.twig
+++ b/templates/2013/components/player.twig
@@ -5,7 +5,7 @@
                {{ __("This video is being processed. Try again later.") }}
             </div>
             {% else %}
-            <video style="width:640px;height:360px;background-color:black;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
+            <video style="width:640px;height:390px;background-color:black;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
 			<source src="./videos/{{ video.video_id }}.converted.mp4" type="video/mp4" />
 			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
 			</video>
@@ -23,6 +23,8 @@
             --plyr-color-main: #1b8ade;
             --plyr-font-family: arial, helvetica, sans-serif;
             --plyr-control-spacing: 10px;
+			width: 640px;
+			height: 390px;
             }
             .plyr--video .plyr__controls {
             padding: 1px 3px !important;
