fix weird gray gap in sbnext index.twig

--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -15,7 +15,7 @@
 	<div class="container" style="display: flex;align-items: center;flex-direction: column;">
 	{% endif %}
 <div class="indexNext">
-<div class="main-content">
+<div class="main-content" style="margin-top:-48px;padding: 75px 0px 25px;display: block;">
 	<div class="container" style="max-width: 970px;">
 		{% if log %}
 		<div class="grid">
