--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -156,7 +156,7 @@
 						{{ __("More videos") }}
 					  </div>
 			</div>
-					<div class="card-body collapsed" id="fromUserVideoList">
+					<div class="collapsed" id="fromUserVideoList">
 				</div>
 			  </div>
 		  </div>
