--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -37,7 +37,7 @@
 		<td class="b"><input type="text" name="title" size="45" maxlength="256" value="{{ userdata.title }}"></td>
 	</tr>
 	<tr>
-		<td class="a">{{ __("Custom color") }}</td>
+		<td class="a">{{ __("Username color") }}</td>
 		<td class="b"><input name="customcolor" data-jscolor="" value="{{ userdata.customcolor | default('523bb8') }}"></td>
 	</tr>
 	<tr>
@@ -51,6 +51,11 @@
 		<td class="a">{{ __("Forum signature") }}</td>
 		<td class="b"><textarea name="signature" rows="5" cols="80" wrap="virtual">{{ userdata.signature }}</textarea></td>
 	</tr>
+</table>
+
+<h3>{{ __("sb2008 Profile") }}</h3>
+<table class="settings">
+Fucking later.
 </table>
 
 <h3>{{ __("Options") }}</h3>
