--- a/templates/hitchhiker/watch.twig
+++ b/templates/hitchhiker/watch.twig
@@ -161,7 +161,8 @@ ytplayer.config = {
         "apply_fade_on_midrolls": true,
         "author": "MOVIECLIPS Trailers",
         "dclk": true,
-        "thumbnail_url": "https:\/\/web.archive.org\/web\/20150611000912\/https:\/\/i.ytimg.com\/vi\/dVDk7PXNXB8\/default.jpg"
+        "thumbnail_url": "https:\/\/web.archive.org\/web\/20150611000912\/https:\/\/i.ytimg.com\/vi\/dVDk7PXNXB8\/default.jpg",
+		"adaptive_fmts": "itag%3D43%26url%3D.%252Fvideos%252FYzG1BTc2NJI.converted.mp4%26sig%3Dgordon.freeman.died.after.he.waited.for.subrocks.2012%26quality%3Dhd720%26type%3Dvideo%252Fmp4%253B%2Bcodecs%253D%2527avc1.4d002a%2527%2Citag%3D43%26url%3D.%252Fvideos%252FYzG1BTc2NJI.converted.mp4%26sig%3D21EDBD12A97AC6CFE5B49224A5AD622895FFADEB.913D0D8ADC3EB8203CA6E08F616AC4B63156EC64%26fallback_host%3Dtc.v14.cache3.c.youtube.com%26quality%3Dhd720%26type%3Dvideo%252Fwebm%253B%2Bcodecs%253D%2522vp8.0%252C%2Bvorbis%2522",
     },
     "html5": true,
     "url_v9as2": "https:\/\/s.ytimg.com\/yts\/swfbin\/player-vflnq25S8\/cps.swf",
